MVP_Nginx_Ingress_Controller/k8s/blue_green_svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rollout-bluegreen-preview
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: rollout-bluegreen
   

---
apiVersion: v1
kind: Service
metadata:
  name: rollout-bluegreen-active
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: rollout-bluegreen
